src/system/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - argocd.magnifikbutik.eu
    secretName: argocd-secret
  rules:
  - host: argocd.magnifikboutique.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
